changeset config update

--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -2,12 +2,12 @@
   "$schema": "https://unpkg.com/@changesets/config@1.5.0/schema.json",
   "changelog": [
     "@changesets/changelog-github",
-    { "repo": "elyra-ai/pipeline-editor" }
+    { "repo": "bourdakos1/changesets-demo" }
   ],
   "commit": false,
   "linked": [["@elyra/*"]],
   "access": "public",
-  "baseBranch": "master",
+  "baseBranch": "main",
   "updateInternalDependencies": "patch",
   "ignore": []
 }
