--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "main": "./packages/extension/dist/index.js",
   "devDependencies": {
     "@babel/core": "^7.13.8",
+    "@changesets/changelog-github": "^0.3.0",
     "@changesets/cli": "^2.14.1",
     "@storybook/addon-actions": "^6.1.20",
     "@storybook/addon-essentials": "^6.1.20",
